--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.1.5",
     "@tanstack/vue-query": "^5.59.17",
     "@vee-validate/yup": "^4.14.6",
     "axios": "^1.7.7",
