--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tanstack/vue-query": "^5.59.17",
     "@vee-validate/yup": "^4.14.6",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "pinia": "^2.2.6",
     "vee-validate": "^4.14.6",
     "vue": "^3.5.12",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.5",
     "vue3-icon": "^3.0.3",
     "vue3-toastify": "^0.2.4",
