--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
     "@tanstack/vue-query": "^5.59.17",
-    "@vee-validate/yup": "^4.14.6",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "pinia": "^2.2.6",
-    "vee-validate": "^4.14.6",
     "vue": "^3.5.12",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.5",
     "vue3-icon": "^3.0.3",
     "vue3-toastify": "^0.2.4",
-    "yup": "^1.4.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
